# external-algorithm

./: CMakeLists.txt  README.md
docs/: comparison_experiment.md  experiment_runner.md  mergesort.md  mergesort_experiment.md  optimal_arity.md  quicksort.md  quicksort_experiment.md
experiments/: data_generator.cpp  optimal_arity_finder.cpp  visualize_results.py
include/algorithms/: mergesort.h  quicksort.h
include/utils/: dataset_manager.h  experiment_parameters.h  file_handler.h  file_manager.h  sort_parameters.h  sort_verification.h  sorting_utils.h  test_generator.h  timer.h
src/: main.cpp
src/algorithms/: mergesort.cpp  quicksort.cpp
src/experiments/: benchmark.cpp  comparison.cpp
src/utils/: dataset_manager.cpp  file_handler.cpp  file_manager.cpp  sort_parameters.cpp  test_generator.cpp  timer.cpp
tests/: comparison_experiment.cpp  experiment_runner.cpp  mergesort_experiment.cpp  quicksort_experiment.cpp  test_mergesort.cpp  test_quicksort.cpp
